--- a/ColorPicker.xaml
+++ b/ColorPicker.xaml
@@ -1,26 +1,27 @@
-﻿<UserControl x:Class="AgileBIM.Controls.ColorPicker"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:AgileBIM.Controls"
-             Loaded="ColorPicker_Loaded"
-             Margin="2"
-             Padding="0"
-             x:Name="uc"
-             MinHeight="20"
-             MinWidth="20"
-             mc:Ignorable="d" 
-             d:DesignHeight="30" d:DesignWidth="30">
-    <UserControl.Resources>
+﻿<Border x:Class="AgileBIM.Controls.ColorPicker"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+        xmlns:local="clr-namespace:AgileBIM.Controls"
+        Loaded="ColorPicker_Loaded"
+        Background="{Binding SelectedBrush, ElementName=uc}"
+        BorderBrush="Black"
+        BorderThickness="2"
+        Padding="0"
+        x:Name="uc"
+        MinHeight="20"
+        MinWidth="20"
+        mc:Ignorable="d" 
+        d:DesignHeight="30" d:DesignWidth="30">
+    <Border.Resources>
         <Style TargetType="{x:Type Button}">
             <Setter Property="HorizontalAlignment" Value="Center" />
             <Setter Property="VerticalAlignment" Value="Center" />
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Button}">
-                        <Border x:Name="bg" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}"
-                                CornerRadius="{Binding BorderRadius, ElementName=uc}">
+                        <Border x:Name="bg" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}">
                             <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalAlignment}" VerticalAlignment="{TemplateBinding VerticalAlignment}" />
                         </Border>
                         <ControlTemplate.Triggers>
@@ -32,12 +33,12 @@
                 </Setter.Value>
             </Setter>
         </Style>
-    </UserControl.Resources>
+    </Border.Resources>
     <Grid>
         <Button x:Name="btnColor" Content="X" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" 
-                Click="btnColor_Click" BorderBrush="Black" BorderThickness="2"
-                Background="{Binding SelectedColor, ElementName=uc}"
-                Foreground="{Binding Background, RelativeSource={RelativeSource Self}}"/>
+                Click="btnColor_Click" BorderBrush="Black" BorderThickness="0"
+                Background="Transparent"
+                Foreground="Transparent"/>
         <Popup x:Name="popColorPalette" PlacementTarget="{Binding ElementName=btnColor}" Width="264">
             <Border BorderThickness="2" BorderBrush="Black">
                 <ItemsControl HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0" ScrollViewer.HorizontalScrollBarVisibility="Disabled" x:Name="icColorList">
@@ -56,4 +57,4 @@
         </Popup>
 
     </Grid>
-</UserControl>
+</Border>
