--- a/WatermarkTextBox.xaml
+++ b/WatermarkTextBox.xaml
@@ -1,94 +1,76 @@
-﻿<!--This is a derivative of: https://www.codeproject.com/Tips/139563/Custom-WPF-TextBox-Style-->
-<TextBox x:Class="AgileBIM.Controls.WatermarkTextBox"
+﻿<TextBox x:Class="AgileBIM.Controls.WatermarkTextBox"
          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
          xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
          xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
          xmlns:local="clr-namespace:AgileBIM.Controls"
          mc:Ignorable="d" 
-         x:Name="uc"
+         x:Name="tbx"
          d:DesignHeight="40" d:DesignWidth="100">
     <TextBox.Style>
         <Style TargetType="{x:Type TextBox}">
-            <Setter Property="KeyboardNavigation.TabNavigation" Value="None" />
-            <Setter Property="FocusVisualStyle" Value="{x:Null}" />
-            <Setter Property="AllowDrop" Value="true" />
-            <Setter Property="Background" Value="White"/>
-            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-            <Setter Property="VerticalContentAlignment" Value="Stretch" />
-            <Setter Property="FontFamily" Value="Consolas" />
-            <Setter Property="FontSize" Value="12" />
-            <Setter Property="UseLayoutRounding" Value="True"/>
-            <Setter Property="Padding" Value="4" />
-            <Setter Property="BorderThickness" Value="1" />
-            <Setter Property="Foreground" Value="Black"/>
-            <Setter Property="BorderBrush" Value="#FFAAAAAA" />
+            <Setter Property="MinWidth" Value="20"/>
+            <Setter Property="Padding" Value="3,0"/>
+            <Setter Property="BorderThickness" Value="2"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="HorizontalContentAlignment" Value="Left"/>
             <Setter Property="Template">
                 <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type TextBox}">
-                        <ControlTemplate.Resources>
-                            <Storyboard x:Key="FocusedOn">
-                                <DoubleAnimationUsingKeyFrames BeginTime="00:00:00" Storyboard.TargetName="FocusVisualElement" Storyboard.TargetProperty="(UIElement.Opacity)">
-                                    <SplineDoubleKeyFrame KeyTime="00:00:00.1000000" Value="1" />
-                                </DoubleAnimationUsingKeyFrames>
-                            </Storyboard>
-                            <Storyboard x:Key="FocusedOff">
-                                <DoubleAnimationUsingKeyFrames BeginTime="00:00:00" Storyboard.TargetName="FocusVisualElement" Storyboard.TargetProperty="(UIElement.Opacity)">
-                                    <SplineDoubleKeyFrame KeyTime="00:00:00.3000000" Value="0" />
-                                </DoubleAnimationUsingKeyFrames>
-                            </Storyboard>
-                            <Storyboard x:Key="DisabledOn">
-                                <ObjectAnimationUsingKeyFrames BeginTime="00:00:00" Storyboard.TargetName="DisabledVisualElement" Storyboard.TargetProperty="(UIElement.Visibility)">
-                                    <DiscreteObjectKeyFrame KeyTime="00:00:00.1000000" Value="{x:Static Visibility.Visible}" />
-                                </ObjectAnimationUsingKeyFrames>
-                            </Storyboard>
-                            <Storyboard x:Key="DisabledOff">
-                                <ObjectAnimationUsingKeyFrames BeginTime="00:00:00" Storyboard.TargetName="DisabledVisualElement" Storyboard.TargetProperty="(UIElement.Visibility)">
-                                    <DiscreteObjectKeyFrame KeyTime="00:00:00.1000000" Value="{x:Static Visibility.Collapsed}" />
-                                </ObjectAnimationUsingKeyFrames>
-                            </Storyboard>
-                        </ControlTemplate.Resources>
+                    <ControlTemplate TargetType="{x:Type TextBoxBase}">
                         <Grid>
-                            <Border Margin="3" x:Name="BorderBase" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="{Binding BorderRadius, ElementName=uc}" />
-                            <Border Margin="0" Background="#FFECF5FD" x:Name="FocusVisualElement" BorderBrush="#FFECF5FD" BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="{Binding BorderRadius2, ElementName=uc}" IsHitTestVisible="False" Opacity="0" >
-                                <Border Background="{TemplateBinding Background}" x:Name="InnerFocusVisualElement" BorderBrush="#FF7DBEF1" BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="{Binding BorderRadius, ElementName=uc}" IsHitTestVisible="False" Opacity="1" />
+                            <Border x:Name="border" 
+                                    BorderBrush="{TemplateBinding BorderBrush}" 
+                                    BorderThickness="{TemplateBinding BorderThickness}" 
+                                    Background="{TemplateBinding Background}" 
+                                    CornerRadius="{Binding BorderRadius, ElementName=tbx}"
+                                    SnapsToDevicePixels="True">
+                                <ScrollViewer x:Name="PART_ContentHost" Focusable="False" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden"/>
                             </Border>
-                            <Label Foreground="DimGray" Grid.Column="1" Margin="5,0,5,0" VerticalAlignment="Center" x:Name="TextPrompt"
-                                   Content="{Binding Watermark, ElementName=uc}" Visibility="Collapsed" Focusable="False" HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"/>
-                            <ScrollViewer Margin="3" x:Name="PART_ContentHost" Foreground="{TemplateBinding Foreground}" />
-                            <Border Margin="3" x:Name="DisabledVisualElement" Background="#A5FFFFFF" BorderBrush="#59C0C0C0" BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="{Binding BorderRadius, ElementName=uc}" IsHitTestVisible="False" Visibility="Collapsed" />
+                            <Border BorderThickness="{TemplateBinding BorderThickness}" Background="Transparent"
+                                    BorderBrush="Transparent" SnapsToDevicePixels="True" IsHitTestVisible="False">
+                                <Label Padding="0" 
+                                   IsEnabled="{Binding IsEnabled, ElementName=tbx}"                                   
+                                   IsHitTestVisible="False">
+                                    <Label.Style>
+                                        <Style TargetType="{x:Type Label}">
+                                            <Setter Property="Content" Value="{Binding Watermark, ElementName=tbx}"/>
+                                            <Setter Property="HorizontalAlignment" Value="{Binding HorizontalContentAlignment, ElementName=tbx}"/>
+                                            <Setter Property="VerticalAlignment" Value="{Binding VerticalContentAlignment, ElementName=tbx}"/>
+                                            <Setter Property="Margin" Value="{Binding Padding, ElementName=tbx}"/>
+                                            <Setter Property="Visibility" Value="Collapsed"/>
+                                            <Setter Property="FontFamily" Value="{Binding WatermarkFontFamily, ElementName=tbx}"/>
+                                            <Setter Property="Foreground" Value="{Binding WatermarkColor, ElementName=tbx}"/>
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding IsEnabled, ElementName=tbx}" Value="False">
+                                                    <Setter Property="Visibility" Value="Visible"/>
+                                                    <Setter Property="HorizontalAlignment" Value="Center"/>
+                                                    <Setter Property="Content" Value="Disabled"/>
+                                                    <Setter Property="FontFamily" Value="Arial"/>
+                                                </DataTrigger>
+                                                <MultiDataTrigger>
+                                                    <MultiDataTrigger.Conditions>
+                                                        <Condition Binding="{Binding Text, ElementName=tbx}" Value=""/>
+                                                        <Condition Binding="{Binding IsFocused, ElementName=tbx}" Value="False"/>
+                                                    </MultiDataTrigger.Conditions>
+                                                    <Setter Property="Visibility" Value="Visible"/>
+                                                </MultiDataTrigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </Label.Style>
+                                </Label>
+                            </Border>
                         </Grid>
+
+
                         <ControlTemplate.Triggers>
-                            <MultiTrigger>
-                                <MultiTrigger.Conditions>
-                                    <Condition Property="IsFocused" Value="False"></Condition>
-                                    <Condition Property="Text" Value=""></Condition>
-                                </MultiTrigger.Conditions>
-                                <MultiTrigger.Setters>
-                                    <Setter Property="Visibility" TargetName="TextPrompt" Value="Visible"></Setter>
-                                </MultiTrigger.Setters>
-                            </MultiTrigger>
-                            <Trigger Property="IsFocused" Value="True">
-                                <Trigger.ExitActions>
-                                    <BeginStoryboard Storyboard="{StaticResource FocusedOff}" x:Name="FocusedOff_BeginStoryboard" />
-                                </Trigger.ExitActions>
-                                <Trigger.EnterActions>
-                                    <BeginStoryboard Storyboard="{StaticResource FocusedOn}" x:Name="FocusedOn_BeginStoryboard" />
-                                </Trigger.EnterActions>
-                            </Trigger>
                             <Trigger Property="IsEnabled" Value="False">
-                                <Trigger.EnterActions>
-                                    <BeginStoryboard Storyboard="{StaticResource DisabledOn}" x:Name="DisabledOn_BeginStoryboard" />
-                                </Trigger.EnterActions>
-
-                                <Setter Property="Foreground" Value="Silver" />
+                                <Setter Property="Opacity" TargetName="border" Value="0.56"/>
                             </Trigger>
-                            <Trigger Property="IsEnabled" Value="True">
-                                <Trigger.EnterActions>
-                                    <BeginStoryboard Storyboard="{StaticResource DisabledOff}" />
-                                </Trigger.EnterActions>
-
-                                <Setter Property="Foreground" Value="#FF000000" />
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="BorderBrush" TargetName="border" Value="{Binding FocusedBorderColor, ElementName=tbx}"/>
+                            </Trigger>
+                            <Trigger Property="IsKeyboardFocused" Value="True">
+                                <Setter Property="BorderBrush" TargetName="border" Value="{Binding FocusedBorderColor, ElementName=tbx}"/>
                             </Trigger>
                         </ControlTemplate.Triggers>
                     </ControlTemplate>
