--- a/WatermarkTextBox.xaml
+++ b/WatermarkTextBox.xaml
@@ -23,10 +23,21 @@
                                     BorderThickness="{TemplateBinding BorderThickness}" 
                                     Background="{TemplateBinding Background}" 
                                     CornerRadius="{Binding BorderRadius, ElementName=tbx}"
+                                    Padding="1"
                                     SnapsToDevicePixels="True">
-                                <ScrollViewer x:Name="PART_ContentHost" Focusable="False" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden"/>
+                                <ScrollViewer x:Name="PART_ContentHost" Focusable="False" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden">
+                                    <ScrollViewer.Style>
+                                        <Style TargetType="{x:Type ScrollViewer}">
+                                            <Style.Triggers>
+                                                <Trigger Property="IsEnabled" Value="False">
+                                                    <Setter Property="Visibility" Value="Collapsed"/>
+                                                </Trigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </ScrollViewer.Style>
+                                </ScrollViewer>
                             </Border>
-                            <Border BorderThickness="{TemplateBinding BorderThickness}" Background="Transparent"
+                            <Border BorderThickness="{TemplateBinding BorderThickness}" Background="Transparent" Padding="1"
                                     BorderBrush="Transparent" SnapsToDevicePixels="True" IsHitTestVisible="False">
                                 <Label Padding="0" 
                                    IsEnabled="{Binding IsEnabled, ElementName=tbx}"                                   
@@ -45,7 +56,7 @@
                                                     <Setter Property="Visibility" Value="Visible"/>
                                                     <Setter Property="HorizontalAlignment" Value="Center"/>
                                                     <Setter Property="Content" Value="Disabled"/>
-                                                    <Setter Property="FontFamily" Value="Arial"/>
+                                                    <Setter Property="FontFamily" Value="Arial"/>                                                    
                                                 </DataTrigger>
                                                 <MultiDataTrigger>
                                                     <MultiDataTrigger.Conditions>
