--- a/AgileButton.xaml
+++ b/AgileButton.xaml
@@ -1,18 +1,17 @@
-﻿<Button x:Class="AgileBIM.Controls.AgileButton"
+﻿<Button x:Class="AgileBIM.XamlTemplates.AgileButtonDesigner"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-        xmlns:local="clr-namespace:AgileBIM.Controls"
+        xmlns:local="clr-namespace:AgileBIM.XamlTemplates"
         mc:Ignorable="d" 
-        x:Name="btn"
         d:DesignHeight="400" d:DesignWidth="400">
     <Button.Template>
-        <ControlTemplate TargetType="{x:Type Button}">
+        <ControlTemplate TargetType="{x:Type Button}" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
             <Border x:Name="border" 
                     BorderBrush="{TemplateBinding BorderBrush}" 
                     BorderThickness="{TemplateBinding BorderThickness}" 
-                    CornerRadius="{Binding BorderRadius, ElementName=btn}" 
+                    CornerRadius="{Binding BorderRadius, RelativeSource={RelativeSource AncestorType=Button}}" 
                     Background="{TemplateBinding Background}" 
                     SnapsToDevicePixels="True">
                 <ContentPresenter x:Name="contentPresenter" 
@@ -28,17 +27,19 @@
             </Border>
             <ControlTemplate.Triggers>
                 <Trigger Property="IsEnabled" Value="False">
-                    <Setter Property="Background" TargetName="border" Value="{Binding BackgroundDisabled, ElementName=btn}"/>
-                    <Setter Property="BorderBrush" TargetName="border" Value="{Binding BorderBrushDisabled, ElementName=btn}"/>
-                    <Setter Property="Foreground" Value="{Binding ForegroundDisabled, ElementName=btn}"/>
+                    <Setter Property="Background" TargetName="border" Value="{Binding BackgroundDisabled, RelativeSource={RelativeSource AncestorType=Button}}"/>
+                    <Setter Property="BorderBrush" TargetName="border" Value="{Binding BorderBrushDisabled, RelativeSource={RelativeSource AncestorType=Button}}"/>
+                    <Setter Property="TextBlock.Foreground" TargetName="contentPresenter" Value="{Binding ForegroundDisabled, RelativeSource={RelativeSource AncestorType=Button}}"/>
                 </Trigger>
                 <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Background" TargetName="border" Value="{Binding BackgroundHover, ElementName=btn}"/>
-                    <Setter Property="BorderBrush" TargetName="border" Value="{Binding BorderBrushHover, ElementName=btn}"/>
+                    <Setter Property="Background" TargetName="border" Value="{Binding BackgroundHover, RelativeSource={RelativeSource AncestorType=Button}}"/>
+                    <Setter Property="BorderBrush" TargetName="border" Value="{Binding BorderBrushHover, RelativeSource={RelativeSource AncestorType=Button}}"/>
+                    <Setter Property="TextBlock.Foreground" TargetName="contentPresenter" Value="{Binding ForegroundHover, RelativeSource={RelativeSource AncestorType=Button}}"/>
                 </Trigger>
                 <Trigger Property="IsPressed" Value="True">
-                    <Setter Property="Background" TargetName="border" Value="{Binding BackgroundPressed, ElementName=btn}"/>
-                    <Setter Property="BorderBrush" TargetName="border" Value="{Binding BorderBrushPressed, ElementName=btn}"/>
+                    <Setter Property="Background" TargetName="border" Value="{Binding BackgroundPressed, RelativeSource={RelativeSource AncestorType=Button}}"/>
+                    <Setter Property="BorderBrush" TargetName="border" Value="{Binding BorderBrushPressed, RelativeSource={RelativeSource AncestorType=Button}}"/>
+                    <Setter Property="TextBlock.Foreground" TargetName="contentPresenter" Value="{Binding ForegroundPressed, RelativeSource={RelativeSource AncestorType=Button}}"/>
                 </Trigger>
             </ControlTemplate.Triggers>
         </ControlTemplate>
