--- a/AgileTabControl.xaml
+++ b/AgileTabControl.xaml
@@ -1,14 +1,13 @@
-﻿<TabControl x:Class="AgileBIM.Controls.AgileTabControl"
+﻿<TabControl x:Class="AgileBIM.XamlTemplates.AgileTabControlDesigner"
             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-            xmlns:local="clr-namespace:AgileBIM.Controls"
-            mc:Ignorable="d" 
-            x:Name="tc"
+            xmlns:local="clr-namespace:AgileBIM.XamlTemplates"
+            mc:Ignorable="d"              
             d:DesignHeight="400" d:DesignWidth="400">
     <TabControl.Template>
-        <ControlTemplate TargetType="{x:Type TabControl}">
+        <ControlTemplate TargetType="{x:Type TabControl}" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
             <Grid x:Name="templateRoot" 
                   ClipToBounds="True" 
                   SnapsToDevicePixels="True" 
@@ -23,37 +22,40 @@
                     <RowDefinition x:Name="RowDefinition1" Height="*"/>
                 </Grid.RowDefinitions>
                 <TabPanel x:Name="HeaderPanel"
-                          Panel.ZIndex="1"
-                          Margin="{Binding MarginHeaderPanel, ElementName=tc}"
-                          Background="Transparent"
+                          Panel.ZIndex="1"                          
+                          Margin="{Binding MarginHeaderPanel, RelativeSource={RelativeSource AncestorType=TabControl}}"
+                          Background="{Binding Background, RelativeSource={RelativeSource AncestorType=TabControl}}"
                           IsItemsHost="True"                          
                           KeyboardNavigation.TabIndex="2"/>
                 
                 <!--this is blank space that doesn't have tabs-->
-                <Border x:Name="blankregion" Panel.ZIndex="1" Margin="0" Padding="0" Background="{TemplateBinding Background}">
+                <Border x:Name="blankregion" Panel.ZIndex="1" Margin="0" Padding="0" 
+                        Background="{Binding Background, RelativeSource={RelativeSource AncestorType=TabControl}}">
                     <ContentPresenter x:Name="blankpresenter"                                      
                                       KeyboardNavigation.TabIndex="1"    
-                                      Content="{Binding TabBlankSpaceContent, ElementName=tc}"                                       
+                                      Content="{Binding TabBlankSpaceContent, RelativeSource={RelativeSource AncestorType=TabControl}}"                                          
                                       ContentSource="TabBlankSpaceContent" 
                                       SnapsToDevicePixels="True"/>
                 </Border>
-                
-                <Border x:Name="ContentPanel"     
-                        BorderBrush="{TemplateBinding BorderBrush}" 
-                        BorderThickness="{TemplateBinding BorderThickness}"                         
-                        Background="{Binding SelectedItem.Background, ElementName=tc}"
+
+                <Grid x:Name="ContentPanel">
+                    <Border 
+                        BorderBrush="{Binding BorderBrush, RelativeSource={RelativeSource AncestorType=TabControl}}"
+                        BorderThickness="{Binding BorderThickness, RelativeSource={RelativeSource AncestorType=TabControl}}"                       
+                        Background="{Binding SelectedItem.Background, RelativeSource={RelativeSource AncestorType=TabControl}}"
                         KeyboardNavigation.DirectionalNavigation="Contained" 
-                        KeyboardNavigation.TabNavigation="Local"
-                        CornerRadius="{Binding BorderRadius, ElementName=tc}"
+                        KeyboardNavigation.TabNavigation="Local"                                           
+                        CornerRadius="{Binding BorderRadius, RelativeSource={RelativeSource AncestorType=TabControl}}"
                         KeyboardNavigation.TabIndex="3">
-                    <ContentPresenter x:Name="PART_SelectedContentHost" 
-                                      ContentTemplate="{TemplateBinding SelectedContentTemplate}" 
-                                      Content="{TemplateBinding SelectedContent}" 
-                                      ContentStringFormat="{TemplateBinding SelectedContentStringFormat}" 
-                                      ContentSource="SelectedContent"
-                                      Margin="{TemplateBinding Padding}" 
-                                      SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
-                </Border>
+                        <ContentControl x:Name="PART_SelectedContentHost" 
+                                        ContentTemplate="{Binding SelectedContentTemplate, RelativeSource={RelativeSource AncestorType=TabControl}}"
+                                        Content="{Binding SelectedContent, RelativeSource={RelativeSource AncestorType=TabControl}}"
+                                        ContentStringFormat="{Binding SelectedContentStringFormat, RelativeSource={RelativeSource AncestorType=TabControl}}" 
+                                        Margin="{Binding Padding, RelativeSource={RelativeSource AncestorType=TabControl}}"
+                                        SnapsToDevicePixels="{Binding SnapsToDevicePixels, RelativeSource={RelativeSource AncestorType=TabControl}}"/>
+                    </Border>
+
+                </Grid>
             </Grid>
             <ControlTemplate.Triggers>
                 <Trigger Property="TabStripPlacement" Value="Top">
@@ -76,9 +78,8 @@
                     <Setter Property="Height" TargetName="RowDefinition1" Value="*"/>
                     <Setter Property="Width" TargetName="ColumnDefinition0" Value="Auto"/>
                     <Setter Property="Width" TargetName="ColumnDefinition1" Value="*"/>
-                    
-                    <!--<Setter Property="Margin" TargetName="HeaderPanel" Value="2,2,2,0"/>-->
                 </Trigger>
+                
                 <Trigger Property="TabStripPlacement" Value="Bottom">
                     <Setter Property="Grid.Row" TargetName="blankregion" Value="1"/>
                     <Setter Property="Grid.RowSpan" TargetName="blankregion" Value="1"/>
@@ -99,9 +100,8 @@
                     <Setter Property="Height" TargetName="RowDefinition1" Value="Auto"/>
                     <Setter Property="Width" TargetName="ColumnDefinition0" Value="Auto"/>
                     <Setter Property="Width" TargetName="ColumnDefinition1" Value="*"/>
-                    
-                    <!--<Setter Property="Margin" TargetName="HeaderPanel" Value="2,0,2,2"/>-->
                 </Trigger>
+                
                 <Trigger Property="TabStripPlacement" Value="Left">
                     <Setter Property="Grid.Row" TargetName="blankregion" Value="1"/>
                     <Setter Property="Grid.RowSpan" TargetName="blankregion" Value="1"/>
@@ -122,9 +122,8 @@
                     <Setter Property="Height" TargetName="RowDefinition1" Value="*"/>
                     <Setter Property="Width" TargetName="ColumnDefinition0" Value="Auto"/>
                     <Setter Property="Width" TargetName="ColumnDefinition1" Value="*"/>
-                                        
-                    <!--<Setter Property="Margin" TargetName="HeaderPanel" Value="2,2,0,2"/>-->
                 </Trigger>
+                
                 <Trigger Property="TabStripPlacement" Value="Right">
                     <Setter Property="Grid.Row" TargetName="blankregion" Value="1"/>
                     <Setter Property="Grid.RowSpan" TargetName="blankregion" Value="1"/>
@@ -145,7 +144,6 @@
                     <Setter Property="Height" TargetName="RowDefinition1" Value="*"/>
                     <Setter Property="Width" TargetName="ColumnDefinition0" Value="*"/>
                     <Setter Property="Width" TargetName="ColumnDefinition1" Value="Auto"/>
-                    <!--<Setter Property="Margin" TargetName="HeaderPanel" Value="0,12,2,2"/>-->
                 </Trigger>
                 <Trigger Property="IsEnabled" Value="False">
                     <Setter Property="TextElement.Foreground" TargetName="templateRoot" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}"/>
