--- a/Tester/MainWindow.xaml
+++ b/Tester/MainWindow.xaml
@@ -4,7 +4,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:local="clr-namespace:Tester"
-    xmlns:abc="clr-namespace:AgileBIM.Controls;assembly=AgileBIM.Controls"
+    xmlns:abc="clr-namespace:AgileBIM.Controls;assembly=AgileBIM.Controls"        
     x:Class="Tester.MainWindow"
     mc:Ignorable="d"
     Background="White"
@@ -28,17 +28,11 @@
              <Button Content="asdfasdf"/>
              </abc:AgileTabItem>                  
              </abc:AgileTabControl>-->
-        
+
 
         <abc:AgileTabControl TabStripPlacement="Right" BorderThickness="4" BorderBrush="Black" BorderRadius="12,0,0,12" Margin="12" MarginHeaderPanel="0,18,0,0" Background="Yellow" Height="200">
             <abc:AgileTabControl.TabBlankSpaceContent>
-                <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center">
-                           also a
-                    <LineBreak/>
-                           content
-                    <LineBreak/>
-                           area
-                </TextBlock>
+                <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center"><Run Text="also a"/><LineBreak/><Run Text="content"/><LineBreak/><Run Text="area"/></TextBlock>
             </abc:AgileTabControl.TabBlankSpaceContent>
             <abc:AgileTabItem Header="Square" TabBackgroundSelected="Gray" TabSelectedMargin="-4,0,0,0" BorderThickness="1" BorderBrush="LightGray" Background="AliceBlue">
                 <Button Content="DAMN"/>
@@ -58,8 +52,15 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <abc:AgileTextBox Watermark="This has no value" WatermarkFontFamily="Arial" BorderRadius="5" Margin="5,0,0,0"/>
-                <abc:AgileTextBox Watermark="This watermark" WatermarkFontFamily="Arial" BorderRadius="5" Margin="5,0" Grid.Column="1" Text="This one has a value"/>
+                <abc:AgileTextBox Watermark="This has no value" WatermarkFontFamily="Arial" BorderRadius="5" Margin="5,0,0,0" 
+                                  ValidationPopupBorderThickness="0"
+                                  ValidationRegexString="*" 
+                                  ValidationMessage="Do stuff here"/>
+                <abc:AgileTextBox Watermark="This watermark" WatermarkFontFamily="Arial" BorderRadius="5" Margin="5,0" Grid.Column="1" Text="This one has a value"
+                                  ValidationMessage="What you have entered is not a valid number"
+                                  ValidateValueAsTrimmed="True"                                  
+                                  IsReadOnly="True"
+                                  ValidationRegexString="^\d*\.?\d*$"/>
             </Grid>
             <TextBlock Text="Disabled Versions" HorizontalAlignment="Center"/>
             <Grid Margin="0,0,0,10">
@@ -217,14 +218,20 @@
                                  Margin="5,0"                                 
                                  Content="Normal Disabled"/>
             </StackPanel>
-            
+            <abc:AgileComboBox Background="Red" SelectedIndex="0">
+                <ComboBoxItem Content="wtf over"/>
+            </abc:AgileComboBox>
+            <ComboBox>
+                <ComboBoxItem Content="wtf over"/>
+            </ComboBox>
 
         </StackPanel>
 
 
 
-        <abc:AgileTabControl Grid.Row="4" Background="Yellow" BorderRadius="5" SelectedIndex="3" Visibility="Visible" MinHeight="200" >
-            <TabControl.Resources>
+        <!--<abc:AgileTabControl Grid.Row="4" BorderBrush="Blue" BorderThickness="5" Background="Yellow" 
+                             BorderRadius="5" SelectedIndex="3" Visibility="Visible" MinHeight="200" >
+            <abc:AgileTabControl.Resources>
                 <Style x:Key="rotatedTab" TargetType="{x:Type abc:AgileTabItem}">
                     <Setter Property="Background" Value="Gray"/>
                     <Setter Property="TabBorderThickness" Value="0,3,3,3"/>
@@ -255,7 +262,7 @@
                     <Setter Property="TabBackgroundHover" Value="Magenta"/>
                     <Setter Property="VerticalContentAlignment" Value="Bottom"/>
                 </Style>
-            </TabControl.Resources>
+            </abc:AgileTabControl.Resources>
 
 
 
@@ -269,7 +276,7 @@
             <abc:AgileTabItem Header="smll" Style="{DynamicResource rotatedTab}"/>
             <abc:AgileTabItem Header="Tab1" Style="{DynamicResource horzTab}"/>
 
-        </abc:AgileTabControl>
+        </abc:AgileTabControl>-->
     </Grid>
 
 
